--- a/css/styles/legacy.css
+++ b/css/styles/legacy.css
@@ -164,18 +164,18 @@ img.alignleft			{ border: 3px solid #EEE; }
 .posts-default img		{ float: left; background: #111; }
 .posts-default .entry-title	{ font-weight: bold; font-size: 12px; margin: 5px; line-height: 1.3em; }
 .posts-default .entry-title a:link, .posts-default .entry-title a:visited	{ color: #0052A3; text-decoration: none; }
+.posts-default .entry-thumbnails-link { margin-left: 5px; }
 .posts-default .entry-summary, .posts-quick .entry-summary	{ color: #111; overflow: hidden; margin: 0 5px 10px; }
 .posts-default .entry-summary	{ font-size: 11px; }
 .no-js .posts-default .entry-summary	{ height: 58px; }
 
 .entry-thumbnails	{ clear: both; display: inline-block; }
 .entry-thumbnails:hover	{ border-color: #383332; }
-.entry-thumbnails-link { float: left; margin: 5px; background: #111; display: block; }
+.entry-thumbnails-link { float: left; background: #111; display: block; text-decoration: none !important; }
 
 .posts-quick			{ margin: 0 10px 10px 0; padding: 10px; background: url(../../images/content-bg.jpg) repeat-x #FFF; border: 1px solid #CCC; }
 .posts-quick li			{ padding: 15px 10px 0 0; border-bottom: 1px solid #CCC; }
 .posts-quick li:first-child	{ padding-top: 5px; }
-.posts-quick img		{ text-indent: -9000px; }
 .posts-quick .entry-title	{ font-weight: bold; font-size: 14px; margin: 0 0 5px; line-height: 1.3em; }
 .posts-quick .entry-title a:link, .posts-quick .entry-title a:visited	{ color: #0052A3; text-decoration: none; }
 .posts-quick .entry-summary	{ font-size: 12px; line-height: 1.6em; margin-bottom: 15px; }
@@ -183,7 +183,7 @@ img.alignleft			{ border: 3px solid #EEE; }
 .posts-quick .entry-thumbnails	{ float: left; margin: 0 10px 10px 5px; border: 3px solid #C1BCA7; }
 .posts-quick .entry-thumbnails:hover	{ border-color: #383332; }
 .posts-quick .entry-thumbnails-link	{ margin: 0; }
-.posts-default .entry-meta, .posts-quick .entry-meta	{ color: #CCC; float: left; background: #000; height: 25px; display: block; margin: -30px 0 0 5px; font-weight: bold; opacity: 0.7; }
+.posts-default .entry-meta, .posts-quick .entry-meta	{ color: #CCC; float: left; background: #000; height: 25px; display: block; margin: -25px 0 0; font-weight: 700; opacity: 0.7; }
 .posts-default .entry-meta a:link, .posts-default .entry-meta a:visited, .posts-quick .entry-meta a:link, .posts-quick .entry-meta a:visited	{ color: #FFF; text-decoration: none; }
 .posts-default .entry-comments, .posts-quick .entry-comments { float: right; margin: 5px 5px 0; background: url(../../images/comments.gif) no-repeat left center; padding: 0 0 0 12px; }
 .posts-default .published, .posts-quick .published	{ text-transform: uppercase; float: left; margin: 5px 5px 0; font-size: 10px; color: #999; border-bottom: none; }
